<resources>
    <string name="app_name">MyPet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dog">"Dog"</string>
    <string name="cat">"Cat"</string>
    <string name="rabbit">"Rabbit"</string>
    <string name="fish">"Fish"</string>
    <string name="add_pet_photo">"* Add Your Pet Photo"</string>
    <string name="select_pet_type">"* Select Your Pet Type"</string>



</resources>